apps/bytestash/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bytestash
  namespace: bytestash
  labels:
    app.kubernetes.io/name: bytestash
    app.kubernetes.io/instance: bytestash
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: bytestash
      app.kubernetes.io/instance: bytestash
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bytestash
        app.kubernetes.io/instance: bytestash
      annotations:
        iscsi.stevevaradi.me/eio-remediate: "true"
    spec:
      containers:
        - name: bytestash
          # renovate: datasource=docker depName=ghcr.io/jordan-dalby/bytestash
          image: ghcr.io/jordan-dalby/bytestash:1.5.14
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5000
          startupProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 24
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              memory: 256Mi
          volumeMounts:
            - name: data
              mountPath: /data/snippets
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: bytestash-data
