apps/bytestash/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bytestash
  namespace: bytestash
  labels:
    app.kubernetes.io/name: bytestash
    app.kubernetes.io/instance: bytestash
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 5000
      targetPort: http
  selector:
    app.kubernetes.io/name: bytestash
    app.kubernetes.io/instance: bytestash
