apps/bytestash/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bytestash
  namespace: bytestash
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "ByteStash"
    gethomepage.dev/group: "Files & Documents"
    gethomepage.dev/icon: "mdi-code-braces-box"
    gethomepage.dev/description: "Code snippets"
spec:
  parentRefs:
    - name: cilium-gateway-local
      namespace: network
      sectionName: https-bytestash
  hostnames:
    - bytestash.stevevaradi.me
  rules:
    - backendRefs:
        - name: bytestash
          port: 5000
